--- a/app/src/main/res/layout/activity_puzzle.xml
+++ b/app/src/main/res/layout/activity_puzzle.xml
@@ -22,8 +22,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:alpha="0.5"
-        app:srcCompat="@drawable/puzzle" />
+        android:alpha="0.5" />
 
     <RelativeLayout
         android:id="@+id/imagePuzzle"
