--- a/app/src/main/res/layout/activity_mood_monster.xml
+++ b/app/src/main/res/layout/activity_mood_monster.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.drawerlayout.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_monsters"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.Monsters">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/icontheme"
@@ -28,7 +33,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="44dp"
         android:fontFamily="@font/mr"
-        android:text="Horrahh!"
+        android:text="@string/horrah"
         android:textColor="#111B3C"
         android:textSize="32sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -43,7 +48,6 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:fontFamily="@font/mr"
-        android:text="NO TENS MASSES PREOCUPACIONS?"
         android:textColor="#c1c1c1"
         android:textSize="20sp"
         android:textAlignment="center"
@@ -55,20 +59,25 @@
     <Button
         android:id="@+id/btncontinue"
         android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="40dp"
-        android:elevation="7dp"
         android:fontFamily="@font/mm"
         android:background="@drawable/bgwhite"
-        android:text="SEGÜENT"
-        android:textAllCaps="false"
-        android:textColor="#fff"
-        android:textSize="20sp"
+        android:text="@string/next"
+        android:textColor="#FFF"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/nav_view_monsters"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        app:headerLayout="@layout/nav_header"
+        app:menu="@menu/nav_menu"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"/>
+</androidx.drawerlayout.widget.DrawerLayout>
