--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -13,14 +13,14 @@
         android:layout_height="69dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/iconov2" />
+        app:srcCompat="@drawable/recuperart" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="RecuperART"
+        android:text="@string/nav_view_title"
         android:textColor="@color/colorBlack"
         android:textSize="30sp"
         android:textStyle="bold"
