--- a/app/src/main/res/layout/activity_descubre.xml
+++ b/app/src/main/res/layout/activity_descubre.xml
@@ -26,11 +26,11 @@
         android:id="@+id/discover"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="@font/mm"
-        android:text="DESCOBREIX"
-        android:textColor="#779BBC"
-        android:textSize="30sp"
+        android:text="@string/discover"
+        android:textColor="@color/colorSecundary"
+        android:textSize="26sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.526"
         app:layout_constraintStart_toStartOf="parent"
