--- a/app/src/main/res/layout/activity_dibuja.xml
+++ b/app/src/main/res/layout/activity_dibuja.xml
@@ -35,7 +35,7 @@
         android:layout_marginTop="20dp"
         android:fontFamily="@font/mm"
         android:text="@string/draw"
-        android:textColor="#779BBC"
+        android:textColor="@color/colorSecundary"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
