--- a/app/src/main/res/layout/activity_respiracio.xml
+++ b/app/src/main/res/layout/activity_respiracio.xml
@@ -21,8 +21,8 @@
         android:layout_marginTop="20dp"
         android:fontFamily="@font/mm"
         android:text="@string/squareBreathe"
-        android:textColor="#779BBC"
-        android:textSize="26sp"
+        android:textColor="@color/colorSecundary"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,7 +50,6 @@
         android:fontFamily="@font/ml"
         android:text="@string/squareBreath_description"
         android:textAlignment="center"
-        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/squareBreath" />
