--- a/app/src/main/res/layout/activity_respiracio_accio.xml
+++ b/app/src/main/res/layout/activity_respiracio_accio.xml
@@ -21,8 +21,8 @@
         android:layout_marginTop="20dp"
         android:fontFamily="@font/mm"
         android:text="@string/squareBreathe"
-        android:textColor="#779BBC"
-        android:textSize="26sp"
+        android:textColor="@color/colorSecundary"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.571"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,7 +38,6 @@
         android:fontFamily="@font/ml"
         android:text="@string/sbdescription"
         android:textAlignment="center"
-        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/respira_accio" />
