--- a/app/src/main/res/layout/activity_respiracio.xml
+++ b/app/src/main/res/layout/activity_respiracio.xml
@@ -55,7 +55,7 @@
         app:layout_constraintTop_toBottomOf="@+id/squareBreath" />
 
     <Button
-        android:id="@+id/buttonRespira"
+        android:id="@+id/botonimagen"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="40dp"
